# overseer

./: Cargo.toml  LICENSE
.devcontainer/: devcontainer.json
overseer/: Cargo.toml
overseer-client/: Cargo.toml
overseer-client/src/: lib.rs
overseer-client/src/connector/: client.rs  mod.rs
overseer-server/: Cargo.toml
overseer-server/src/: lib.rs  main.rs
overseer-server/src/database/: database.rs  memory.rs  mod.rs  storage.rs  watcher.rs
overseer-server/src/database/store/: file.rs  mod.rs
overseer-server/src/database/store/alloc/: error.rs  frame.rs
overseer-server/src/database/store/paging/: error.rs  internal_page.rs  leaf_page.rs  meta.rs  mod.rs  page.rs
overseer-server/src/net/: driver.rs  error.rs  mod.rs  sus.rs
overseer/src/: lib.rs
overseer/src/access/: mod.rs  watcher.rs
overseer/src/error/: mod.rs  network.rs  value.rs
overseer/src/models/: asynctrait.rs  key.rs  mod.rs  value.rs
overseer/src/network/: decoder.rs  mod.rs  packet.rs  varint.rs
tests/: Cargo.toml
tests/src/: main.rs  tandem.rs
