[package]
name = "overseer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
overseer = { path = "../overseer" }
slotmap = "1.0.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.16.0"

thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.16.0"
