[package]
name = "overseer-server"
version = "0.1.0"
edition = "2021"



[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
dashmap = "6.1.0"
overseer = { path = "../overseer" }

slotmap = "1.0.7"
tempfile = "3.16.0"

thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
monoio = { version = "0.2.4", features = ["sync"] }
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.16.0"
