[package]
name = "overseer"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = "0.8.3"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
monoio = { version = "0.2.4", features = ["flume", "sync"] }
async-trait = "0.1.87"
