[package]
name = "overseer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
monoio = { version = "0.2.4", features = ["flume", "sync"] }
async-trait = "0.1.87"
integer-encoding = { version = "4.0.2", features = ["futures_async"] }
parity-scale-codec = "3.7.4"
futures-util = { version = "0.3.31", features = ["io"] }
